--- a/background.html
+++ b/background.html
@@ -3,9 +3,24 @@
 <script>
 chrome.extension.onRequest.addListener(function(request, sender, sendResponse) {
     console.log("Request test");
-	if (request.method == "getLocalStorage") sendResponse({
-        data: localStorage[request.key]
-    });
-    else sendResponse({});
+    console.log(sender);
+    console.log(request.key);
+    console.log(request.saddr);
+    if (request.method == "setLocalStorage")
+    {
+    	  console.log("data set");
+    	  localStorage.setItem("saddr",request.saddr);
+    }
+        
+    	    
+    if (request.method == "getLocalStorage")
+    {
+    	    console.log("response received");
+            sendResponse({data: localStorage[request.key]});
+    }
+    else
+    {
+    	    sendResponse({});
+    }
 });
 </script>
