--- a/options.html
+++ b/options.html
@@ -1,38 +1,15 @@
-<html>
-    
-    <head>
-        <title>
-            My Test Extension Options
-        </title>
-        <script type="text/javascript" src="sample.js"></script>
-    </head>
-
-    <script type="text/javascript"> 
-// Saves options to localStorage.
-function save_options() {
-    var select = document.getElementById("tasaddr");
-    var startaddr = select.value;
-    localStorage.setItem("saddr", startaddr);
-}
-// Restores select box state to saved value from localStorage.
-
-
-function restore_options() {
-    var address = localStorage.getItem("saddr");
-    var txtAddress = document.getElementById("tasaddr");
-    txtAddress.value = address;
-}
-    </script>
-    
-    <body onload="restore_options()">
-        Your Starting address:
-        <textarea id="tasaddr" rows="2" cols="20">
-            Enter your address here
-        </textarea>
-        <br>
-        <button onclick="save_options()">
-            Save
-        </button>
-    </body>
-
-</html>
+<!DOCTYPE html>
+<head>
+   <title>Get Directions Options</title>
+   <link href="options.css" rel="stylesheet"/>
+</head>
+<body>
+<h3>Your Starting address:</h3>
+<div><textarea id="addressbox" rows="2" cols="20"></textarea>
+<br>
+<section id="save">
+<button>Save</button>
+<div id="info">Saved</div>
+</section>
+<script src="options.js"></script>
+</body>
