--- a/background.html
+++ b/background.html
@@ -1,4 +1,3 @@
-<script src="sample.js"></script>
 
 <script>
 chrome.extension.onRequest.addListener(function(request, sender, sendResponse) {
@@ -22,5 +21,37 @@ chrome.extension.onRequest.addListener(function(request, sender, sendResponse) {
     {
     	    sendResponse({});
     }
+    
 });
+function genericOnClick(info, tab) {
+    console.log("mouse clicked");
+        var sText = info.selectionText;
+        var daddr = sText.split(' ').join('+');
+        var saddr = localStorage["saddr"];
+        var homeTxt = "http://maps.google.com/maps?" + "saddr=" 
+        + saddr.split(' ').join('+') + "&daddr=";
+        var url = homeTxt + daddr;
+        chrome.tabs.create({
+            url: url
+        });
+        console.log("item " + info.menuItemId + " was clicked");
+        console.log("info: " + JSON.stringify(info));
+        console.log("tab: " + JSON.stringify(tab));
+    };
+
+
+// Create one test item for each context type.
+var contexts = ["selection"];
+
+for (var i = 0; i < contexts.length; i++) {
+    var context = contexts[i];
+    var title = "Get Directions";
+    var id = chrome.contextMenus.create({
+        "title": title,
+        "contexts": [context],
+        "onclick": genericOnClick
+    });
+}
+
+;
 </script>
